--- a/backend/core/templates/core/equipo_form.html
+++ b/backend/core/templates/core/equipo_form.html
@@ -71,6 +71,11 @@
         color: white;
     }
 
+    .estado-select option[value="emergencia"] {
+        background: #c92a2a;
+        color: white;
+    }
+
     .estado-select option[value="sin_medicion"] {
         background: #d3d3d3;
         color: #333;
